# google-cloud-datastore-rs

./: Cargo.toml  README.md  build.rs
config/: settings.toml
proto/: aggregation_result.proto  datastore.proto  entity.proto  query.proto
src/: auth.rs  datastore.rs  main.rs  settings.rs
