[package]
name = "google-cloud-datastore-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.10.2", features = ["tls"] }

[build-dependencies]
tonic-build = "0.10.2"
